--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,9 @@
         <li>
           <a href="/">Home</a>
         </li>
+        <li>
+          <a href="/search">Search</a>
+        </li>
       </ul>
     </nav>
     <section class="content">
