--- a/templates/file.html
+++ b/templates/file.html
@@ -34,6 +34,10 @@
       margin: 0;
     }
 
+    #actions_container .anchorbutton {
+      text-align: left;
+    }
+
     @media screen and (max-width: 721px) {
       .full_file_sidebar {
         display: block;
